<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#FBFBFB"
    android:paddingHorizontal="13dp"
    android:paddingTop="18dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingHorizontal="13dp"
        android:paddingVertical="15dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/father_of_header">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_word"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold"
                android:id="@+id/welcomeView"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_secntence"
                android:textColor="@color/light_gray"
                android:textSize="13sp"
                android:layout_below="@id/welcomeView"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="21sp"
                android:id="@+id/signUpTextView"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                android:layout_marginTop="18dp"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/father_of_middle">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email_Word"
                android:paddingVertical="26dp"
                android:id="@+id/emailField"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/light_gray"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingVertical="26dp"
                android:textColor="@color/black"
                android:id="@+id/passwordField"
                android:textColorHint="@color/light_gray"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:hint="@string/Password"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_password_word"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:id="@+id/forgetPasswordTextView"
                android:textColor="@color/light_gray"
                android:textAlignment="textEnd"
                />

        </LinearLayout>
        <Button
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_btn_back"
            android:text="SIGN IN"
            android:textSize="20sp"
            android:padding="13dp"
            android:layout_below="@id/father_of_middle"
            android:id="@+id/signInButton"
            android:enabled="true"
            android:textColor="@color/white"
            />
        <ProgressBar
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_below="@id/father_of_middle"
            android:layout_centerHorizontal="true"
            android:visibility="gone"/>
    </RelativeLayout>

</RelativeLayout>