<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="#FBFBFB"
    android:paddingHorizontal="13dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="120dp"
        android:paddingBottom="60dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="13dp"
            android:background="@color/white"
            android:paddingVertical="18dp"
            android:layout_marginBottom="28dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                android:id="@+id/signUpWord"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/father_of_middle"
                android:layout_marginTop="60dp"
                android:layout_below="@id/signUpWord">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Name_word"
                    android:paddingVertical="26dp"
                    android:id="@+id/nameField"
                    android:inputType="textPersonName"
                    android:textColorHint="@color/light_gray"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email_Word"
                    android:paddingVertical="26dp"
                    android:id="@+id/emailField"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/light_gray"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:paddingVertical="26dp"
                    android:textColor="@color/black"
                    android:id="@+id/passwordField"
                    android:textColorHint="@color/light_gray"
                    android:textSize="18sp"
                    android:inputType="textPassword"
                    android:hint="@string/Password"/>
            </LinearLayout>
            <Button
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_btn_back"
                android:text="SIGN Up"
                android:textSize="20sp"
                android:padding="13dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:id="@+id/signUpButton"
                android:enabled="true"
                android:textColor="@color/white"
                />
        </RelativeLayout>
        <ProgressBar
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="55dp"
            android:layout_centerHorizontal="true"
            android:visibility="gone"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/backBtn"
        android:src="@drawable/ic_baseline_chevron_left_24"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="-13dp"
        app:tint="@color/black" />

</RelativeLayout>